# PnaVU_cursch

./: .gitignore  .gitmodules  Admin.cpp  Admin.h  BasePacketFilter.h  Button.cpp  Button.h  CMakeLists.txt  CaptureWindow.cpp  CaptureWindow.h  Cart.cpp  Cart.h  Category.cpp  Category.h  CourseWork.pro  Customer.cpp  Customer.h  Database.cpp  Database.h  EditWindow.cpp  Exception.cpp  Floor.cpp  Floor.h  Guest.cpp  Guest.h  Helper.h  HexHelper.h  Hotel Managment System.cpp  Hotel Managment System.vcxproj  Hotel Managment System.vcxproj.filters  Hotel.cpp  Hotel.h  IPHeader.h  IPPacket.h  IPUtils.h  LoginForm.cpp  LoginForm.h  LoginForm.ui  MainWindow.cpp  MainWindow.h  (+59 more)
Hotel Ma.4557b04f/x64/Debug/: Hotel Managment System.exe.recipe  Hotel Managment System.ilk  vc143.idb
Hotel Ma.4557b04f/x64/Debug/Hotel Ma.4557b04f.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Hotel Managment System.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Hotel Managment System/: Hotel Managment System.sln
Hotel Managment System/Hotel Managment System/: Floor.cpp  Floor.h  Guest.cpp  Guest.h  Hotel Managment System.cpp  Hotel Managment System.vcxproj  Hotel Managment System.vcxproj.filters  Hotel.cpp  Hotel.h  NamedEntity.h  Room.cpp  Room.h  hotel_data.txt  main.cpp
Hotel Managment System/Hotel Managment System/x64/Debug/: Hotel Managment System.exe.recipe
Hotel Managment System/x64/Debug/: hotel_data.txt
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
components/: indexhandler.cpp  indexhandler.h  logger.cpp  logger.h
components/auth/: authhandler.cpp  authhandler.h
components/data/: dataconverter.cpp  dataconverter.h  datastorer.cpp
components/database/: database.cpp  database.h  databasenorel.cpp  databasenorel.h  databaserel.cpp  databaserel.h
components/database/internal/: tables.h
components/requests/: irequestservice.cpp  irequestservice.h  requestservice.cpp  requestservice.h
kursach/x64/Debug/: kursach.exe.recipe  vc143.idb
kursach/x64/Debug/kursach.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  kursach.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
main/: clienthandler.cpp  servicehandler.cpp  servicehandler.h
test/: test.txt
ui/: mainwindow.ui  mainwindow_old.ui
utils/: datetimeutils.cpp  datetimeutils.h  filesystemutils.cpp  filesystemutils.h
x64/Debug/: Hotel Managment System.exe.recipe  Hotel Managment System.ilk  vc143.idb
x64/Debug/Hotel Ma.4557b04f.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Hotel Managment System.lastbuildstate  link.command.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Debug/Hotel Ma.83b1db83.tlog/: Cl.items.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Брайчук/: CMakeLists.txt  Eval.cpp  Eval.h  MoveBoard.cpp  MoveBoard.h  PieceBoard.h  Search.cpp  Search.h  StateBoard.cpp  StateBoard.h  TranpositionTable.cpp  TranpositionTable.h  UCI.cpp  UCI.h  ZorbistFenBoard.cpp  ZorbistFenBoard.h  bitboard.cpp  bitboard.h  cat.txt  main.cpp  movegen.cpp  movegen.h  types.h
Брайчук/chess110/: CMakeLists.txt  GameBoard.cpp  GameBoard.h  Move.cpp  Move.h  Piece.cpp  Piece.h  SimpleBoard.cpp  SimpleBoard.h  main.cpp  types.h
Губаревич/: CMakeLists.txt
Губаревич/header/: AnxietyCopingSuggestions.h  AnxietyTest.h  PersonalAnxietyTest.h  SituationalAnxietyTest.h  UserManager.h  globalFuncs.h
Губаревич/source/: globalFuncs.cpp  main.cpp
Докучиц/: AccessCodeDialog.cpp  AccessCodeDialog.h  AccessCodeDialog.ui  Military_Office.pro  conscript.cpp  conscript.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  millitaryunit.cpp  millitaryunit.h  person.cpp  person.h
Ламеко/: LR.pro  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui
Минов/Kursach/: Additional.cpp  Additional.hpp  ClassDiagram.cd  Engine.cpp  Engine.hpp  FileManager.cpp  FileManager.hpp  GPFields.hpp  GPLogic.cpp  GPLogic.hpp  GPRender.cpp  GPRender.hpp  GPUI.cpp  GPUI.hpp  GameProcess.cpp  GameProcess.hpp  GameScene.cpp  GameScene.hpp  IScene.hpp  Kursach.vcxproj  Kursach.vcxproj.filters  MenuScene.cpp  MenuScene.hpp  MultiplayerScene.cpp  MultiplayerScene.hpp  SceneFactory.hpp  SceneLoadProp.hpp  Tile.cpp  Tile.hpp  leaders.txt  log.txt  main.cpp
Минов/Kursach/resources/: shader.frag
Рязанова/: animation.cpp  animation.h  entity.cpp  entity.h  level.cpp  level.h  main.cpp  platformer.sln  platformer.vcxproj  platformer.vcxproj.filters  tinystr.cpp  tinyxml.cpp  tinyxmlparser.cpp
Рязанова/x64/Debug/: platformer.exe.recipe  platformer.vcxproj.FileListAbsolute.txt  vc143.idb
Рязанова/x64/Debug/platformer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  platformer.lastbuildstate
Санько/: CMakeLists.txt  filewindow.cpp  filewindow.h  filewindow.ui  functionalfile.cpp  functionalfile.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.txt
Феденков/: Accesory.cpp  Accesory.h  Cartesian.h  DrawCartesian.cpp  DrawCartesian.h  DrawPolar.cpp  DrawPolar.h  FileManager.cpp  FileManager.h  Function.cpp  Function.h  GraphicDrawer.h  Graphicdrawer.cpp  Header.h  IDraw.cpp  IDraw.h  Math.cpp  MathHeader.h  MyGraphicView.cpp  Parser.cpp  Parser.h  SceneWork.pro  buttonhandler.cpp  buttonhandler.h  cartesian.cpp  graphic.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mygraphicsview.h  myqlineedit.cpp  myqlineedit.h
(+7 files in other folders)
